feat(ep): decision model
